Sidebar select and scrollbar kind of fixed

--- a/css/TheMaster.css
+++ b/css/TheMaster.css
@@ -144,9 +144,16 @@
   padding: 0;
   background-color: #fff;
 }
+#Container .container-main #Container-Left #Container-Left-Menu {
+  overflow: hidden;
+}
+#Container .container-main #Container-Left #Container-Left-Menu .cp-scroller {
+  position: absolute;
+  overflow-y: scroll;
+  height: 100%;
+}
 #Container .container-main #Container-Left #Container-Left-Menu .cp-fix {
   position: absolute;
-  overflow-y: auto;
   width: 100%;
   height: 100%;
 }
@@ -186,20 +193,20 @@
 }
 #Container .container-main #Container-Left #Container-Left-Menu .cp-menu .profile-box .profileContainer-userInfo {
   position: absolute;
-  top: 110px;
-  height: 85px;
+  top: 120px;
+  height: 70px;
   width: 100%;
 }
 #Container .container-main #Container-Left #Container-Left-Menu .cp-menu .profile-box .profileContainer-userInfo p {
   font-size: 1.1em;
-  line-height: 2.6;
+  line-height: initial;
   color: #d2d2d2;
   text-align: center;
   width: 100%;
 }
 #Container .container-main #Container-Left #Container-Left-Menu .cp-menu .profile-box .profileContainer-userInfo h2 {
   white-space: nowrap;
-  line-height: 0px;
+  line-height: initial;
   text-align: center;
   font-size: 22px;
 }
@@ -241,6 +248,10 @@
 #Container .container-main #Container-Left #Container-Left-Menu .cp-menu .cp-item i {
   display: inline-block;
   padding: 0 15px 0 12px;
+}
+#Container .container-main #Container-Left #Container-Left-Menu .cp-menu .cp-item .active {
+  background: #5F6FB0 !important;
+  color: white;
 }
 #Container .container-main #Container-Left #Container-Left-Menu .cp-menu .cp-item a {
   display: block;
